@@ -1,21 +1,28 @@
 package com.coffeepot.coffeepotspring.controller;
 
+import java.io.File;
+import java.io.IOException;
+import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.multipart.MultipartFile;
 
 import com.coffeepot.coffeepotspring.dto.MemoDTO;
 import com.coffeepot.coffeepotspring.dto.ResponseDTO;
+import com.coffeepot.coffeepotspring.model.ImageDataEntity;
 import com.coffeepot.coffeepotspring.model.MemoEntity;
+import com.coffeepot.coffeepotspring.service.ImageService;
 import com.coffeepot.coffeepotspring.service.MemoService;
 
 import lombok.RequiredArgsConstructor;
@@ -28,15 +35,42 @@ import lombok.extern.slf4j.Slf4j;
 public class MemoController {
 	
 	private final MemoService memoService;
+	private final ImageService imageService;
+	
+	private final String MEMO_IMAGE_BASE_PATH = "C:/Users/KWC/Desktop/PKNU/Y2023/CoffePot/coffeePot-BE/coffeepotspring/src/main/resources/memoimages/";
 	
 	@PostMapping
-	public ResponseEntity<?> createMemo(@AuthenticationPrincipal String userId, @RequestBody MemoDTO memoDTO) {
+	public ResponseEntity<?> createMemo(@AuthenticationPrincipal String userId, @ModelAttribute MemoDTO memoDTO) {
 		try {
-			MemoEntity memoEntity = MemoDTO.toEntity(memoDTO);
-			memoEntity.setUserId(userId);
-			List<MemoEntity> memoEntities = memoService.create(memoEntity);
-			List<MemoDTO> memoDTOs = memoEntities.stream().map(MemoDTO::new).collect(Collectors.toList());
-			ResponseDTO<MemoDTO> response = ResponseDTO.<MemoDTO>builder().data(memoDTOs).build();
+			MemoEntity memoEntity = MemoEntity.builder()
+					.userId(userId)
+					.title(memoDTO.getTitle())
+					.content(memoDTO.getContent())
+					.visibility("public".equals(memoDTO.getVisibility()))
+					.createdAt(LocalDateTime.now())
+					.build();
+			MemoEntity createdMemoEntity = memoService.create(memoEntity);
+
+			if (memoDTO.getUploadedImages() != null) {
+				List<ImageDataEntity> imageDataEntities = new ArrayList<>();
+				for (MultipartFile multipartFile : memoDTO.getUploadedImages()) {
+					String savedName = createdMemoEntity.getId() + "_" + System.currentTimeMillis() + "_" + multipartFile.getOriginalFilename();
+					File savedFile = new File(MEMO_IMAGE_BASE_PATH + savedName);
+					multipartFile.transferTo(savedFile);
+					
+					imageDataEntities.add(ImageDataEntity.builder()
+							.memoEntity(createdMemoEntity)
+							.originalName(multipartFile.getOriginalFilename())
+							.savedName(savedName)
+							.type(multipartFile.getContentType())
+							.build());
+				}
+				imageService.uploadImages(imageDataEntities);
+			}
+			
+			List<String> imageUrisToBeDownloaded = imageService.retrieveSavedNamesByMemoEntity(createdMemoEntity);
+			List<MemoDTO> responseMemoDTO = List.of(new MemoDTO(createdMemoEntity, imageUrisToBeDownloaded));
+			ResponseDTO<MemoDTO> response = ResponseDTO.<MemoDTO>builder().data(responseMemoDTO).build();
 			return ResponseEntity.ok().body(response);
 		} catch (Exception e) {
 			String error = e.getMessage();
@@ -48,28 +82,70 @@ public class MemoController {
 	@GetMapping
 	public ResponseEntity<?> retrieveMemoList(@AuthenticationPrincipal String userId) {
 		List<MemoEntity> memoEntities = memoService.retrieveByUserId(userId);
-		List<MemoDTO> memoDTOs = memoEntities.stream().map(MemoDTO::new).collect(Collectors.toList());
+		List<MemoDTO> memoDTOs = memoEntities.stream().map(memoEntity -> {
+			List<String> imageUrisToBeDownloaded = imageService.retrieveSavedNamesByMemoEntity(memoEntity);
+			return new MemoDTO(memoEntity, imageUrisToBeDownloaded);
+		}).toList();
 		ResponseDTO<MemoDTO> response = ResponseDTO.<MemoDTO>builder().data(memoDTOs).build();
 		return ResponseEntity.ok().body(response);
 	}
 	
+	
 	@PutMapping
-	public ResponseEntity<?> updateMemo(@AuthenticationPrincipal String userId, @RequestBody MemoDTO memoDTO) {
-		MemoEntity memoEntity = MemoDTO.toEntity(memoDTO);
-		memoEntity.setUserId(userId);
-		List<MemoEntity> memoEntities = memoService.update(memoEntity);
-		List<MemoDTO> memoDTOs = memoEntities.stream().map(MemoDTO::new).collect(Collectors.toList());
-		ResponseDTO<MemoDTO> response = ResponseDTO.<MemoDTO>builder().data(memoDTOs).build();
-		return ResponseEntity.ok().body(response);
+	public ResponseEntity<?> updateMemo(@AuthenticationPrincipal String userId, @ModelAttribute MemoDTO memoDTO) {
+		try {
+			MemoEntity memoEntity = MemoEntity.builder()
+					.id(memoDTO.getId())
+					.title(memoDTO.getTitle())
+					.content(memoDTO.getContent())
+					.visibility("public".equals(memoDTO.getVisibility()))
+					.build();
+			memoEntity.setUserId(userId);
+			MemoEntity updatedMemoEntity = memoService.update(memoEntity);
+			
+			imageService.deleteByMemoEntity(updatedMemoEntity);
+			if (memoDTO.getUploadedImages() != null) {
+				List<ImageDataEntity> imageDataEntities = new ArrayList<>();
+				for (MultipartFile multipartFile : memoDTO.getUploadedImages()) {
+					String savedName = updatedMemoEntity.getId() + "_" + System.currentTimeMillis() + "_" + multipartFile.getOriginalFilename();
+					File savedFile = new File(MEMO_IMAGE_BASE_PATH + savedName);
+					multipartFile.transferTo(savedFile);
+					
+					imageDataEntities.add(ImageDataEntity.builder()
+							.memoEntity(updatedMemoEntity)
+							.originalName(multipartFile.getOriginalFilename())
+							.savedName(savedName)
+							.type(multipartFile.getContentType())
+							.build());
+				}
+				imageService.uploadImages(imageDataEntities);
+			}
+			List<String> imageUrisToBeDownloaded = imageService.retrieveSavedNamesByMemoEntity(memoEntity);
+			List<MemoDTO> memoDTOs = List.of(new MemoDTO(updatedMemoEntity, imageUrisToBeDownloaded));
+			ResponseDTO<MemoDTO> response = ResponseDTO.<MemoDTO>builder().data(memoDTOs).build();
+			return ResponseEntity.ok().body(response);
+		} catch (Exception e) {
+			String error = e.getMessage();
+			ResponseDTO<MemoDTO> response = ResponseDTO.<MemoDTO>builder().error(error).build();
+			return ResponseEntity.badRequest().body(response);
+		}
 	}
 	
 	@DeleteMapping
 	public ResponseEntity<?> deleteMemo(@AuthenticationPrincipal String userId, @RequestBody MemoDTO memoDTO) {
 		try {
-			MemoEntity memoEntity = MemoDTO.toEntity(memoDTO);
-			memoEntity.setUserId(userId);
-			List<MemoEntity> memoEntities = memoService.delete(memoEntity);
-			List<MemoDTO> memoDTOs = memoEntities.stream().map(MemoDTO::new).collect(Collectors.toList());
+			MemoEntity memoEntity = MemoEntity.builder()
+					.id(memoDTO.getId())
+					.userId(userId)
+					.build();
+			imageService.deleteByMemoEntity(memoEntity);
+			
+			memoService.delete(memoEntity);
+			List<MemoEntity> memoEntities = memoService.retrieveByUserId(userId);
+			List<MemoDTO> memoDTOs = memoEntities.stream().map(entity -> {
+				List<String> imageUrisToBeDownloaded = imageService.retrieveSavedNamesByMemoEntity(entity);
+				return new MemoDTO(entity, imageUrisToBeDownloaded);
+			}).toList();
 			ResponseDTO<MemoDTO> response = ResponseDTO.<MemoDTO>builder().data(memoDTOs).build();
 			return ResponseEntity.ok().body(response);
 		} catch (Exception e) {
